tests/NormalTests/paczka1/small_fuzzy/53573222.err
Error in line 3: CCMyfZ2cW S806 30,2
Error in line 12: 0oy S102 31,4
